--- a/MOBILE/html/new/deposit.html
+++ b/MOBILE/html/new/deposit.html
@@ -90,13 +90,7 @@
                     </li>
                 </ul>
                 <ul class="br_list mb30">
-                    <li class="line bg_eeeeee">
-                      <strong class="fl_l only_english bold">2019.10.26</strong>
-                    </li>
-                    <li>
-                        <strong class="fl_l only_english">상품후기 적립</strong>
-                        <strong class="fl_r"><span class="only_english color_01">200 P</span></strong>
-                    </li>
+                    <li class="line bg_eeeeee"><strong>고객님의 예치금 내역은 존재하지 않습니다.</strong></li>
                 </ul>
             </div>
 
