--- a/MOBILE/html/new/listReceipt.html
+++ b/MOBILE/html/new/listReceipt.html
@@ -116,7 +116,7 @@
                     <td>f</td>
                 </tr>
                 <tr>
-                    <td colspan="4" class="no-data t_center">내역이 없습니다.</td>
+                    <td colspan="4" class="no-data not t_center">내역이 없습니다.</td>
                 </tr>
             </tbody>
         </table><!-- 
@@ -136,7 +136,7 @@
                     <td colspan="4">내역이 없습니다.</td></tr>
                 </tbody>
             </table> -->
-            <div class="my_comment">※ 영업점 영수증은 최근 3년까지 내역만 제공합니다. ※</div>
+            <div class="my_comment mt15">※ 영업점 영수증은 최근 3년까지 내역만 제공합니다. ※</div>
             <div class="receipt_back" style="display: none;">
                 <div class="receipt_inner">
                     <div onclick="closeBtn();" class="btn_white_l">닫기</div>
