--- a/MOBILE/html/new/listTargetReview.html
+++ b/MOBILE/html/new/listTargetReview.html
@@ -44,7 +44,7 @@
 <div id="content">
         
     <input type="hidden" name="eof" value="1">
-    <div id="my_content" class="space_pad">
+    <div id="my_content" class="space_pad pt10">
         <div class="gray_box2">
             <div class="tab_box">
                 <a href="/m/mypage/listTargetReview" class="active">상품평 쓰기 (0)</a>
@@ -55,18 +55,45 @@
         <div class="noti_re mt30">
             <p>텍스트 후기를 남겨주시면 100P적립, 포토 후기를 남겨주시면
             200P적립됩니다.</p>
-
-            <p class="mt20">CD,DVD 관련 상품은 상품평을 작성하셔도 후기 포인트가
+            <p class="mt30">CD,DVD 관련 상품은 상품평을 작성하셔도 후기 포인트가
             적립되지 않습니다.</p>
+
+            <div class="myreview_edit_wrap">
+              <div class="mt40 t_ar">
+                <a href="#none" class="detail_view ">상품평쓰기</a>
+              </div>
+              <div class="myreview_edit_box mt10">                
+                <div class="myreview_edit_title">
+                  <div class="img_wrap">
+                    <img src="../../images/new/@img.png" alt="">
+                  </div>
+                  <div class="text_wrap elip2">
+                    엔뚜마노 이노센트 4.8L 대용량 가습기 EM-H 480
+                  </div>
+                </div>
+                <ul class="myreview_edit_list">
+                  <li class="items">
+                    <dl class="myreview_order_list">
+                      <dt>주문일</dt>
+                      <dd class="only_english bold base">2020.01.03</dd>
+                    </dl>
+                    <dl class="myreview_order_list">
+                      <dt>주문금액</dt>
+                      <dd><span class="only_english bold color_01">45900</span>원 <span class="only_english bold">1</span>개</dd>
+                    </dl>
+                  </li>
+                </ul>
+              </div>
+            </div>
 
             <!-- <img src="http://image.kyobobook.co.kr/newimages/giftshop_new/common/images/mypage/20_targetreview.jpg" style="width:100%;"> -->
         </div>
-        <div class="bbs_box02 edit">
+        <!-- <div class="bbs_box02 edit">
             <ul>
             
             </ul>
-        </div>
-        <p class="info">매월 우수 상품평 작성자 10분께 통합포인트 5,000점이 적립됩니다. 상품평에 적합하지 않은 내용, 미풍양속을 해치는 내용 등은 통보없이 삭제될 수 있으며 통합포인트가 지급되지 않습니다. 상품문의 교환 반품 요청 제품이상 등 불편사항은 1:1 문의 하기를 이용해 주세요.</p>
+        </div> -->
+        <p class="info mt30">매월 우수 상품평 작성자 10분께 통합포인트 5,000점이 적립됩니다. 상품평에 적합하지 않은 내용, 미풍양속을 해치는 내용 등은 통보없이 삭제될 수 있으며 통합포인트가 지급되지 않습니다. 상품문의 교환 반품 요청 제품이상 등 불편사항은 1:1 문의 하기를 이용해 주세요.</p>
     </div>
 
 </div>
