--- a/MOBILE/html/new/list_wish_product.html
+++ b/MOBILE/html/new/list_wish_product.html
@@ -74,7 +74,7 @@
         <div class="tab_01_st">
             <ul>
                 <li class="active"><a href="#none">기프트<span class="font_t">(2,110)</span></a></li>
-                <li><a href="#none">브랜드<span class="font_t">(2,110)</span></a></li>
+                <li><a href="#none">음반<span class="font_t">(2,110)</span></a></li>
             </ul>
         </div>
         <div class="sort_link_wrap">
