--- a/MOBILE/html/new/listone.html
+++ b/MOBILE/html/new/listone.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" type="text/css" href="../../css/common.css">
 <link rel="stylesheet" type="text/css" href="../../css/swiper.min.css">
 <link rel="stylesheet" type="text/css" href="../../css/biz/common_v2.css">
-<link rel="stylesheet" type="text/css" href="../../css/biz/hottm_yj.css">
+<link rel="stylesheet" type="text/css" href="../../css/biz/hottm_yj.css">1
 <!-- 201228 작업부분 -->
 <link rel="stylesheet" type="text/css" href="../../css/new/orderandpay.css">
 
@@ -32,7 +32,7 @@
     <div class="inner"> <a href="#n" class="btn_home" _onclick="location.href='http://devm.hottracks.co.kr/';return false;">홈버튼</a>       
       <!-- 서브 -->
       <div class="sub_wrap"> <a href="#n" _onclick="locBack();return false;" class="btn_back">뒤로가기</a> <a href="#n" class="btn_category" _onclick="bizOpenGnbMenu();return false;">카테고리 보기</a> <a href="#n" class="btn_search" _onclick="gnbSrchFrm();return false;">검색</a>
-        <h2 id="subTitle">고객센터</h2>
+        <h2 id="subTitle">SOS상담</h2>
       </div>
       <!--// 서브 --> 
     </div>
@@ -89,7 +89,7 @@
             </div>
 
             <div class="btn_area box_flex mt30">
-                <a class="btn btn_basic" href="/m/help/sosCounselMain">1:1 문의하기</a>
+                <a class="btn btn_basic" href="/m/help/sosCounselMain">SOS상담하기</a>
             </div>
         </div>
     </div>
