--- a/MOBILE/html/new/totsaved.html
+++ b/MOBILE/html/new/totsaved.html
@@ -85,13 +85,7 @@
                     </li>
                 </ul>
                 <ul class="br_list mb30">
-                    <li class="line bg_eeeeee">
-                        <strong class="fl_l only_english bold">2019.10.26</strong>
-                    </li>
-                    <li>
-                        <strong class="fl_l only_english">상품후기 적립</strong>
-                        <strong class="fl_r"><span class="only_english color_01">200 P</span></strong>
-                    </li>
+                    <li class="line bg_eeeeee"><strong>6개월 이내에 고객님께서 사용/적립하신 내역이 존재하지 않습니다.</strong></li>
                 </ul>
             </div>
         </div>
