--- a/MOBILE/path_now.html
+++ b/MOBILE/path_now.html
@@ -1246,7 +1246,7 @@ th.row-headers-background {
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/memberShip.html">./html/new/memberShip.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
-      </tr>
+      </tr><!-- 
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
@@ -1257,12 +1257,12 @@ th.row-headers-background {
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/totsaved_blank.html">./html/new/totsaved_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
-      </tr>
+      </tr> -->
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
         <td class="s16">통합포인트</td>
-        <td class="s16">내역있음</td>
+        <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/totsaved.html">./html/new/totsaved.html</a></td>
@@ -1273,13 +1273,13 @@ th.row-headers-background {
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
         <td class="s16">온라인예치금 - 예치금내역 </td>
-        <td class="s16">내역있음</td>
+        <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/deposit.html">./html/new/deposit.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
-      </tr>
+      </tr><!-- 
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
@@ -1290,18 +1290,18 @@ th.row-headers-background {
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/deposit_blank.html">./html/new/deposit_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
-      </tr>
+      </tr> -->
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
         <td class="s16">온라인예치금 - 환불신청내역 </td>
-        <td class="s16">내역있음</td>
+        <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/deposit2.html">./html/new/deposit2.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
-      </tr>
+      </tr><!-- 
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
@@ -1312,7 +1312,7 @@ th.row-headers-background {
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/deposit2_blank.html">./html/new/deposit2_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
-      </tr><!-- 
+      </tr> --><!-- 
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
@@ -1324,7 +1324,7 @@ th.row-headers-background {
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr> -->
-        <tr style="height:29px;">
+        <!-- <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
         <td class="s16">온라인예치금 - 예치금 환불신청 팝업</td>
@@ -1334,18 +1334,18 @@ th.row-headers-background {
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/deposit.html">./html/new/deposit.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
-      </tr>
+      </tr> -->
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
         <td class="s16">쿠폰 - 온라인쿠폰 </td>
-        <td class="s16">내역있음</td>
+        <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/coupon.html">./html/new/coupon.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
-      </tr>
+      </tr><!-- 
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
@@ -1356,18 +1356,18 @@ th.row-headers-background {
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/coupon_blank.html">./html/new/coupon_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
-      </tr>
+      </tr> -->
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
         <td class="s16">쿠폰 - 영업점쿠폰</td>
-        <td class="s16">내역있음</td>
+        <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/coupon2.html">./html/new/coupon2.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
-      </tr>
+      </tr><!-- 
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
@@ -1378,7 +1378,7 @@ th.row-headers-background {
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/coupon2_blank.html">./html/new/coupon2_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
-      </tr>
+      </tr> -->
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
@@ -1387,28 +1387,6 @@ th.row-headers-background {
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listReceipt.html">./html/new/listReceipt.html</a></td>
-        <td class="s19" dir="ltr">완료</td>
-        <td class="s16"></td>
-      </tr><!-- 
-        <tr style="height:29px;">
-        <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
-        <td class="s14" dir="ltr"></td>
-        <td class="s16">영업점영수증 - 상세 </td>
-        <td class="s16">내역있음</td>
-        <td class="s16" dir="ltr"></td>
-        <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listNotice.html">./html/new/listNotice.html</a></td>
-        <td class="s19" dir="ltr">완료</td>
-        <td class="s16"></td>
-      </tr> -->
-        <tr style="height:29px;">
-        <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
-        <td class="s14" dir="ltr"></td>
-        <td class="s16">영업점영수증- 상세</td>
-        <td class="s16">내역없음</td>
-        <td class="s16" dir="ltr"></td>
-        <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listReceipt_blank.html">./html/new/listReceipt_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1423,7 +1401,7 @@ th.row-headers-background {
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
-        <tr style="height:29px;">
+        <!-- <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
         <td class="s16">영수증 후 적립 - 상세 </td>
@@ -1444,12 +1422,12 @@ th.row-headers-background {
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/savePointByOffBill_blank.html">./html/new/savePointByOffBill_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
-      </tr>
+      </tr> -->
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
-        <td class="s16">주문배송조회-리스트</td>
-        <td class="s16">내역있음</td>
+        <td class="s16">주문배송조회</td>
+        <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderDelivery.html">./html/new/orderDelivery.html</a></td>
@@ -1460,7 +1438,7 @@ th.row-headers-background {
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
         <td class="s16">주문배송상세내역</td>
-        <td class="s16">내역있음</td>
+        <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderDeliveryDetail.html">./html/new/orderDeliveryDetail.html</a></td>
@@ -1470,15 +1448,15 @@ th.row-headers-background {
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
-        <td class="s16">주문배송상세내역</td>
-        <td class="s16">내역없음</td>
+        <td class="s16">주문배송취소상세내역</td>
+        <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderDeliveryDetail2.html">./html/new/orderDeliveryDetail2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderDeliveryDetail3.html">./html/new/orderDeliveryDetail3.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
-        <tr style="height:29px;">
+        <!-- <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
         <td class="s16">주문배송조회</td>
@@ -1488,12 +1466,12 @@ th.row-headers-background {
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/popup_blank.html">./html/new/popup_blank.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
-      </tr>
+      </tr> -->
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
         <td class="s16">좋아요상품</td>
-        <td class="s16">내역없음</td>
+        <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/list_wish_product.html">./html/new/list_wish_product.html</a></td>
@@ -1504,7 +1482,7 @@ th.row-headers-background {
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
         <td class="s16">좋아요브랜드</td>
-        <td class="s16">내역없음</td>
+        <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/list_wish_brand.html">./html/new/list_wish_brand.html</a></td>
@@ -1515,58 +1493,14 @@ th.row-headers-background {
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
         <td class="s16">좋아요좋아요</td>
-        <td class="s16">내역없음</td>
+        <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/list_wish_like.html">./html/new/list_wish_like.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
-        <tr style="height:29px;">
-        <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
-        <td class="s14" dir="ltr"></td>
-        <td class="s16">좋아요상품</td>
-        <td class="s16">내역있음- 기프트 </td>
-        <td class="s16" dir="ltr"></td>
-        <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listNotice.html">./html/new/listNotice.html</a></td>
-        <td class="s19" dir="ltr">완료</td>
-        <td class="s16"></td>
-      </tr>
-        <tr style="height:29px;">
-        <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
-        <td class="s14" dir="ltr"></td>
-        <td class="s16">좋아요상품</td>
-        <td class="s16">내역있음- 음반</td>
-        <td class="s16" dir="ltr"></td>
-        <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listNotice.html">./html/new/listNotice.html</a></td>
-        <td class="s19" dir="ltr">완료</td>
-        <td class="s16"></td>
-      </tr>
-        <tr style="height:29px;">
-        <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
-        <td class="s14" dir="ltr"></td>
-        <td class="s16">좋아요브랜드</td>
-        <td class="s16">내역있음</td>
-        <td class="s16" dir="ltr"></td>
-        <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listNotice.html">./html/new/listNotice.html</a></td>
-        <td class="s19" dir="ltr">완료</td>
-        <td class="s16"></td>
-      </tr>
-        <tr style="height:29px;">
-        <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
-        <td class="s14" dir="ltr"></td>
-        <td class="s16">좋아요좋아요</td>
-        <td class="s16">내역있음</td>
-        <td class="s16" dir="ltr"></td>
-        <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listNotice.html">./html/new/listNotice.html</a></td>
-        <td class="s19" dir="ltr">완료</td>
-        <td class="s16"></td>
-      </tr>
-        <tr style="height:29px;">
+        <!-- <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
         <td class="s16">내상품평관리</td>
@@ -1587,7 +1521,7 @@ th.row-headers-background {
         <td class="s18" dir="ltr"><a target="_blank" href="./html/new/listMyReview.html">./html/new/listMyReview.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>.html
-      </tr>
+      </tr> -->
         <tr style="height:29px;">
         <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
         <td class="s14" dir="ltr"></td>
