--- a/PC/html/new/menu0_result.html
+++ b/PC/html/new/menu0_result.html
@@ -330,8 +330,8 @@
                             <!-- BEST FAQ -->
                             <!-- 201228 : S 작업부분 -->
                             <!-- 210121 수정 -->
-                            <h3 class="s_title mgt80"> <span class="only_english">통합검색 FAQ</span><!-- <strong class="desc">고객님들께서 가장 많이 궁금해하시는 사항입니다.</strong> --></h3>
-                            <table class="bbs_list01">
+                            <h3 class="page_title mgt80"> <span class=""> FAQ</span>검색결과<!-- <strong class="desc">고객님들께서 가장 많이 궁금해하시는 사항입니다.</strong> --></h3>
+                            <table class="bbs_list01 ">
                                 <caption></caption>
                                 <colgroup>
                                     <col width="160"/>
