--- a/MOBILE/html/new/deposit2.html
+++ b/MOBILE/html/new/deposit2.html
@@ -82,6 +82,7 @@
                         <strong class="fl_l only_english">상품후기 적립</strong>
                         <strong class="fl_r"><span class="only_english color_01">200 P</span></strong>
                     </li>
+                    <li class="line bg_eeeeee"><strong>고객님의 환불신청내역은 존재하지 않습니다.</strong></li>
                 </ul>
             </div>
             <!-- <a href="javascript:history.back();" class="btn_cls">닫기</a> -->
