--- a/MOBILE/html/new/listone_pop.html
+++ b/MOBILE/html/new/listone_pop.html
@@ -249,7 +249,7 @@ function resetFrm(){
     <div class="inner"> <a href="#n" class="btn_home" _onclick="location.href='http://devm.hottracks.co.kr/';return false;">홈버튼</a>       
       <!-- 서브 -->
       <div class="sub_wrap"> <a href="#n" _onclick="locBack();return false;" class="btn_back">뒤로가기</a> <a href="#n" class="btn_category" _onclick="bizOpenGnbMenu();return false;">카테고리 보기</a> <a href="#n" class="btn_search" _onclick="gnbSrchFrm();return false;">검색</a>
-        <h2 id="subTitle">고객센터</h2>
+        <h2 id="subTitle">SOS상담</h2>
       </div>
       <!--// 서브 --> 
     </div>
@@ -456,6 +456,25 @@ function resetFrm(){
                                         <span class="input_wrap inner_dot">@</span>
                                         <span class="input_wrap end">
                                             <input type="text" placeholder="" class="width_email" name="email2">
+                                        </span>
+                                        <span class="input_wrap">
+                                            <select name="" id="" class="width_email">
+                                                <option value="">직접입력</option>
+                                                 <option value="">직접입력</option>
+                                                <option value="naver.com">naver.com</option>
+                                                <option value="hanmail.net">hanmail.net</option>
+                                                <option value="hotmail.com">hotmail.com</option>
+                                                <option value="nate.com">nate.com</option>
+                                                <option value="yahoo.co.kr">yahoo.co.kr</option>
+                                                <option value="empas.com">empas.com</option>
+                                                <option value="dreamwiz.com">dreamwiz.com</option>
+                                                <option value="freechal.com">freechal.com</option>
+                                                <option value="lycos.co.kr">lycos.co.kr</option>
+                                                <option value="korea.com">korea.com</option>
+                                                <option value="gmail.com">gmail.com</option>
+                                                <option value="hanmir.com">hanmir.com</option>
+                                                <option value="paran.com">paran.com</option>
+                                            </select>
                                         </span>
                                     </div>
                                 </div>
