--- a/MOBILE/html/new/savePointByOffBill.html
+++ b/MOBILE/html/new/savePointByOffBill.html
@@ -63,6 +63,7 @@
             <a href="#" class="my_info" onclick="location.href='http://devm.hottracks.co.kr/m/offLine/listReceipt';return false;"><span>영업점 영수증</span></a>
             <a href="#" class="my_info active" style="float:right;" onclick="location.href='http://devm.hottracks.co.kr/m/offLine/savePointByOffBill';return false;"><span>영수증 후 적립</span></a>
         </div> -->
+        <div class="info t_c space_pad mt30">총<strong class="only_english color_01"> 0 </strong>건이 있습니다.</div>
 
         <div class="space_pad">
             <div class="tab_box distance">
