--- a/MOBILE/html/new/coupon2.html
+++ b/MOBILE/html/new/coupon2.html
@@ -152,6 +152,22 @@ function closeBarcode(){
 </div>
 <!--  여기 까지 삭제 -->
             </div>
+            
+                            <div class="couponbox distance">
+                                <div class="box_on">
+                                    <div class="inner_box">
+                                        <p class="cpn_tit">러브미모어 10%</p>
+                                        <p class="cpn_txt">
+                                            <span>10</span>% 할인
+                                        </p>
+                                        <p class="cpn_date">
+                                            2021-01-28 ~ 2021-01-31
+                                        </p>
+                                        상품단가 0원 이상
+                                    </div>
+                                </div>
+                                <!--  class: box -->
+                            </div>
             <dl class="notice_txt distance mb30">
                 <dt><h3>꼭 알아두기</h3></dt>
                 <dd class="mt10">쿠폰별 혜택과 사용조건, 유효기간을 꼭 확인해주세요.</dd>
