--- a/MOBILE/html/new/questionList.html
+++ b/MOBILE/html/new/questionList.html
@@ -57,10 +57,10 @@
         
   <!-- sub contents -->
   <div id="my_content">
-    <ul class="br_list space_pad">
-      <li class="">
+    <ul class="br_list space_pad my_qna">
+      <li class="color_03">
           <strong class="fl_l">
-              <em>등록일 : 2019.09.03</em><br>
+              <em>등록일 : <span class="only_english base bold">2019.09.03</span></em><br>
               <em>상품명 : [2+1] [카멜] 전자노트 카멜보드 10인치 CB1010</em>
           </strong>
           <strong class="fl_r">
